Switched to cards and grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,23 @@
 
 {% block content %}
     <h1>{% block title %} List of coffee {% endblock %}</h1>
-    {% for coffee in coffee_products %}
-    <a href="{{ url_for('single_product', product_id=coffee['id']) }}">
-        <h2>{{ coffee['title'] }}</h2>
-    </a>
-    <span class="badge bg-primary">{{ coffee['vendor'] }}</span>
-    <hr>
-    {% endfor %}
+   
+    <div class="container text-center">
+        {% for coffees in coffee_products|batch(3) %}
+        <div class="row">
+        {% for coffee in coffees %}
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <a href="{{ url_for('single_product', product_id=coffee['id']) }}" class="stretched-link">
+                        <h3 class="card-title">{{ coffee['title'] }}</h3>
+                    </a>
+                 <span class="badge bg-primary">{{ coffee['vendor'] }}</span>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        </div>
+      {% endfor %}
+    </div>
 {% endblock %}
