--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('index')}}">Common Grounds</a>
+    <nav class="navbar navbar-expand-md navbar-dark py-4 " style="background-color: #032830">
+        <a class="navbar-brand" href="{{ url_for('index')}}" mb-0 h1>Hello Beb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
