--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark py-4 " style="background-color: #032830">
-        <a class="navbar-brand" href="{{ url_for('index')}}" mb-0 h1>Hello Beb</a>
+        <a class="navbar-brand" href="{{ url_for('index')}}" mb-0 h1>Community Grounds</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
