--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark py-4 " style="background-color: #032830">
+    <nav class="navbar navbar-expand-md navbar-dark py-4 " style="background-color: #40312f">
         <a class="navbar-brand" href="{{ url_for('index')}}" mb-0 h1>Community Grounds</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
