Change variable name for clarity

--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -1,3 +1,3 @@
 {% extends 'base.html' %}
-    {% for vendors in all_vendors['Items']}
-    <h2>{{ vendors['vendor'] }} </h2>
+    {% for roaster in all_roasters['Items']}
+    <h2>"{{ roaster['id'] }}"</h2>
