--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{{ url_for('vendors') }}">Roasters</a>
             </li>
             </ul>
         </div>
+        
     </nav>
     <div class="container">
         {% block content %} {% endblock %}
