--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
             <div class="card h-100">
                 <img src="{{ coffee['images']}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <a href="{{ url_for('single_product', product_vendor=coffee['vendor'], product_id=coffee['id']) }}" class="stretched-link">
+                    <a href="{{ url_for('single_product', product_vendor=coffee['pk'], product_id=coffee['sk']) }}" class="stretched-link">
                         <h3 class="card-title">{{ coffee['title'] }}</h3>
                     </a>
-                 <span class="badge bg-primary">{{ coffee['vendor'] }}</span>
+                 <span class="badge bg-primary">{{ coffee['pk'] }}.split('ROASTER#')[1]</span>
                 </div>
             </div>
          </div>
