--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                     <a href="{{ url_for('single_product', product_vendor=coffee['pk'], product_id=coffee['sk']) }}" class="stretched-link">
                         <h3 class="card-title">{{ coffee['title'] }}</h3>
                     </a>
-                 <span class="badge bg-primary">{{ coffee['pk'] }}.split('ROASTER#')[1]</span>
+                 <span class="badge bg-primary">{{ coffee['pk'].split('ROASTER#')[1] }}</span>
                 </div>
             </div>
          </div>
