--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for roaster in all_roasters['Items'] %}
-    <h2>{{ roaster['id'] }}</h2>
+    {% for roaster in all_roasters %}
+        <a href="{{ url_for('vendor_products', product_vendor=roaster['sk']) }}" class="stretched-link">
+        <h2>{{ roaster['sk'].split('ROASTER#')[1] }}</h2>
+         </a>
     {% endfor %}
 {% endblock %}
