--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     {% for roaster in all_roasters %}
-        <a href="{{ url_for('vendor_products', product_vendor=roaster['sk']) }}" class="stretched-link">
+        <a href="{{ url_for('vendor_products', product_vendor=roaster['sk']) }}" class="link"">
             <h2>{{ roaster['sk'].split('ROASTER#')[1] }}</h2>
         </a>
     {% endfor %}
-    {% endblock %}
+{% endblock %}
