--- a/templates/regions.html
+++ b/templates/regions.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="list-group list-group-flush">
     {% for region in all_regions %}
-        <a href="{{ url_for('regions') }}" class="fs-3 list-group-item list-group-item-action">{{ region['region'] }}</a>
+        <a href="{{ url_for('region_products', product_region=region['region']) }}" class="fs-3 list-group-item list-group-item-action">{{ region['region'] }}</a>
     {% endfor %}
 </div>
 {% endblock %}
