--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="list-group list-group-flush">
     {% for roaster in all_roasters %}
-        <a href="{{ url_for('vendor_products', product_vendor=roaster['sk']) }}" class="link"">
-            <h2>{{ roaster['sk'].split('ROASTER#')[1] }}</h2>
-        </a>
+        <a href="{{ url_for('vendor_products', product_vendor=roaster['sk']) }}" class="fs-3 list-group-item list-group-item-action">{{ roaster['sk'].split('ROASTER#')[1] }}</a>
     {% endfor %}
+</div>
 {% endblock %}
