--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>{% block title %}  {% endblock %}</h1>
-   
+    <h2>Latest coffees</h2>
     <div class="container text-center">
         {% for coffees in coffee_products|batch(3) %}
         <div class="row row-cols-1 row-cols-md-3 g-4">
