--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
                 <div class="col-sm-6 col-xl-3 pb-3 pt-3">                          
                 </div>                     
                 <div class="col-sm-6 col-xl-3 pb-3 pt-3">                          
-                </div>                     
+                </div>
+                <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d49cbe0d12859ab953050dab3/53a66718c73b7b116a6d6ccbe.js");</script>                     
             </div>                 
         </div>             
     </section>
